[Backend Admin] CURD and Cache LRU Book,Author
