# backend-manager-student/src/admin_api/v1/Swagger/admin_api/author.wagger.yaml
@@ -11,19 +11,6 @@ servers:
       description: Local development server admin api
 # General
 components:
-    # Check type header
-    headers:
-        AuthHeader:
-            description: Header info student.
-            type: string
-            required: true
-    #Save cookie client
-    SaveCookie:
-        Set-Cookie:
-            description: '`refreshToken`'
-            schema:
-                type: string
-                example: refreshToken=51872eca5efedcf424db4cf5afd16a9d00ad25b743a034c9c221afc85d18dcd5e4ad6e3f08607550; Path=/; Expires=Tue, 8 Feb 2023 09:14:17 GMT; HttpOnly
     # Parameter
     parameters:
         COOKIE-CLIENT:
@@ -120,15 +107,14 @@ components:
                                 type: object
                                 example: Out Of Service
     #!@author Nguyễn Tiến Tài
-    #!created_at 31/01/2023
-    #!created_at 08/02/2023
-    #!description: Login Admin
+    #!created_at 03/02/2023
+    #!description: create author
 paths:
-    /api/v1/admin/login:
+    /v1/admin/private/author/create:
         post:
-            summary: Login Admin
-            tags: [Login Admin]
-            operationId: loginAdmin
+            summary: Create Author
+            tags: [Create Author]
+            operationId: createAuthor
             parameters:
                 - $ref: '#/components/parameters/COOKIE-CLIENT'
                 - $ref: '#/components/parameters/X-DEVICE-ID'
@@ -136,6 +122,7 @@ paths:
                 - $ref: '#/components/parameters/X-OS-VERSION'
                 - $ref: '#/components/parameters/X-APP-VERSION'
                 - $ref: '#/components/parameters/X-DEVICE-NAME'
+                - $ref: '#/components/parameters/TOKEN'
             requestBody:
                 required: true
                 content:
@@ -146,23 +133,29 @@ paths:
                                 input:
                                     type: object
                                     properties:
-                                        admin_login_input:
+                                        author_input:
                                             type: object
                                             properties:
-                                                mssv:
-                                                    type: number
-                                                    example: 60136745
-                                                password:
+                                                name:
                                                     type: string
+                                                    example: Tai
+                                                avatar_uri:
+                                                    type: string
+                                                    example: https://res.cloudinary.com/taithinhnam/image/upload/v1677663849/library_school_image/images/123456/1629883834625425408/1677663846991-tuy%E1%BB%81n.jpg
+                                                dob:
+                                                    type: date
                                                     example: '20000531'
+                                                gender:
+                                                    type: number
+                                                    example: '0'
                         required:
-                            - mssv
-                            - password
+                            - name
+                            - avatar_uri
+                            - dob
+                            - gender
             responses:
                 200:
-                    description: Successful authentication
-                    headers:
-                        $ref: '#/components/SaveCookie'
+                    description: Create success
                     content:
                         application/json:
                             schema:
@@ -171,22 +164,11 @@ paths:
                                     status:
                                         type: integer
                                         example: 200
-                                    data:
-                                        type: object
-                                        example:
-                                            {
-                                                phone: number,
-                                                mask_phone: string,
-                                                mobile_network_code: number,
-                                                mobile_network_country_code: number,
-                                                mobile_network_name: string,
-                                                password: string,
-                                            }
                                     message:
                                         type: string
                                         example: Success
                 400:
-                    description: Email,Phone,Password Invalid and Phone not exit
+                    description: Invalid input
                     content:
                         application/json:
                             schema:
@@ -202,14 +184,13 @@ paths:
                     $ref: '#/components/responses/ServerFail'
 
     #!@author Nguyễn Tiến Tài
-    #!created_at 31/01/2023
-    #!updated_at 08/02/2023 && 28/02/2023
-    #!description Add Student
-    /api/v1/admin/private/add/student:
+    #!created_at 03/02/2023
+    #!description: update author
+    /v1/admin/private/author/update:
         post:
-            summary: Add Student
-            tags: [Add Student For Excel]
-            operationId: AddStudent
+            summary: Update Author
+            tags: [Update Author]
+            operationId: updateAuthor
             parameters:
                 - $ref: '#/components/parameters/COOKIE-CLIENT'
                 - $ref: '#/components/parameters/X-DEVICE-ID'
@@ -225,11 +206,36 @@ paths:
                         schema:
                             type: object
                             properties:
-                                files:
+                                input:
                                     type: object
+                                    properties:
+                                        author_input:
+                                            type: object
+                                            properties:
+                                                author_id:
+                                                    type: string
+                                                    example: 1474830717476143106
+                                                name:
+                                                    type: string
+                                                    example: Tai
+                                                avatar_uri:
+                                                    type: string
+                                                    example: https://res.cloudinary.com/taithinhnam/image/upload/v1677663849/library_school_image/images/123456/1629883834625425408/1677663846991-tuy%E1%BB%81n.jpg
+                                                dob:
+                                                    type: date
+                                                    example: 20000531
+                                                gender:
+                                                    type: number
+                                                    example: 0
+                        required:
+                            - author_id
+                            - name
+                            - avatar_uri
+                            - dob
+                            - gender
             responses:
                 200:
-                    description: Data exit database
+                    description: Update success
                     content:
                         application/json:
                             schema:
@@ -241,27 +247,8 @@ paths:
                                     message:
                                         type: string
                                         example: Success
-                                    element:
-                                        type: object
-                                        example: Nothing changes to update
-                201:
-                    description: Add student success
-                    content:
-                        application/json:
-                            schema:
-                                type: object
-                                properties:
-                                    status:
-                                        type: integer
-                                        example: 201
-                                    message:
-                                        type: string
-                                        example: Success
-                                    element:
-                                        type: array
-                                        example: [{ user_id: string }]
                 400:
-                    description: Email,Phone Invalid or Email or Phone or Email or Mssv exits
+                    description: Invalid input
                     content:
                         application/json:
                             schema:
@@ -273,20 +260,16 @@ paths:
                                     message:
                                         type: string
                                         example: Bad Request
-                                    element:
-                                        type: object
-                                        example: { result: string }
                 503:
                     $ref: '#/components/responses/ServerFail'
-
     #!@author Nguyễn Tiến Tài
-    #!created_at 28/02/2023
-    #!description: New Token
-    /api/v1/admin/renew-token:
+    #!created_at 03/02/2023
+    #!description: delete author
+    /v1/admin/private/author/delete:
         post:
-            summary: New Token
-            tags: [New Token]
-            operationId: reNewToken
+            summary: Delete Author
+            tags: [Delete Author]
+            operationId: updateAuthor
             parameters:
                 - $ref: '#/components/parameters/COOKIE-CLIENT'
                 - $ref: '#/components/parameters/X-DEVICE-ID'
@@ -295,13 +278,28 @@ paths:
                 - $ref: '#/components/parameters/X-APP-VERSION'
                 - $ref: '#/components/parameters/X-DEVICE-NAME'
                 - $ref: '#/components/parameters/TOKEN'
-                  schema:
-                      $ref: '#/components/headers/AuthHeader'
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                input:
+                                    type: object
+                                    properties:
+                                        author_input:
+                                            type: object
+                                            properties:
+                                                author_id:
+                                                    type: string
+                                                    example: 1474830717476143106
+                        required:
+                            - author_id
             responses:
                 200:
-                    description: New Token Success
-                    headers:
-                        $ref: '#/components/SaveCookie'
+                    description: Delete success
+                    content:
                         application/json:
                             schema:
                                 type: object
@@ -312,21 +310,8 @@ paths:
                                     message:
                                         type: string
                                         example: Success
-                                    element:
-                                        type: object
-                                        example:
-                                            {
-                                                result:
-                                                    {
-                                                        access_token: string,
-                                                        refresh_token: string,
-                                                        role: number,
-                                                        user_id: string,
-                                                        name: string,
-                                                    },
-                                            }
                 400:
-                    description: Token is Blacklist or Invalid Header or The refresh token is invalid or Device Invalid
+                    description: Invalid input
                     content:
                         application/json:
                             schema:
@@ -337,20 +322,17 @@ paths:
                                         example: 400
                                     message:
                                         type: string
-                                        example: string
-                                    element:
-                                        type: object
-                                        example: { result: string }
+                                        example: Bad Request
                 503:
                     $ref: '#/components/responses/ServerFail'
     #!@author Nguyễn Tiến Tài
-    #!created_at 28/02/2023
-    #!description: Logout admin
-    /api/v1/admin/private/logout:
-        post:
-            summary: Logout Admin
-            tags: [Logout Admin]
-            operationId: logoutAdmin
+    #!created_at 03/02/2023
+    #!description: Detail author
+    /v1/admin/private/author/detail/:author_id:
+        get:
+            summary: Detail Author
+            tags: [Detail Author]
+            operationId: detailAuthor
             parameters:
                 - $ref: '#/components/parameters/COOKIE-CLIENT'
                 - $ref: '#/components/parameters/X-DEVICE-ID'
@@ -359,11 +341,9 @@ paths:
                 - $ref: '#/components/parameters/X-APP-VERSION'
                 - $ref: '#/components/parameters/X-DEVICE-NAME'
                 - $ref: '#/components/parameters/TOKEN'
-                  schema:
-                      $ref: '#/components/headers/AuthHeader'
             responses:
                 200:
-                    description: Logout Success
+                    description: Detail success
                     content:
                         application/json:
                             schema:
@@ -375,10 +355,37 @@ paths:
                                     message:
                                         type: string
                                         example: Success
-                401:
-                    $ref: '#/components/responses/UnauthorizedError'
-                500:
-                    $ref: '#/components/responses/ServerCURDFail'
-
+                503:
+                    $ref: '#/components/responses/ServerFail'
+    #!@author Nguyễn Tiến Tài
+    #!created_at 03/02/2023
+    #!description: Get all author
+    /v1/admin/private/author/all:
+        get:
+            summary: Get all Author
+            tags: [Get all Author]
+            operationId: getAllAuthor
+            parameters:
+                - $ref: '#/components/parameters/COOKIE-CLIENT'
+                - $ref: '#/components/parameters/X-DEVICE-ID'
+                - $ref: '#/components/parameters/X-OS-TYPE'
+                - $ref: '#/components/parameters/X-OS-VERSION'
+                - $ref: '#/components/parameters/X-APP-VERSION'
+                - $ref: '#/components/parameters/X-DEVICE-NAME'
+                - $ref: '#/components/parameters/TOKEN'
+            responses:
+                200:
+                    description: success
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    status:
+                                        type: integer
+                                        example: 200
+                                    message:
+                                        type: string
+                                        example: Success
                 503:
                     $ref: '#/components/responses/ServerFail'
